@@ -1,4 +1,4 @@
-<addon id="plugin.video.animepahe" name="animepahe" provider-name="null" version="0.0.1">
+<addon id="plugin.video.animepahe" name="animepahe" provider-name="null" version="0.0.2">
   <requires>
     <import addon="xbmc.python" version="2.25.0" />
     <import addon="script.module.requests" version="2.12.4" />
